--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="{{_user.photoUrl}}" alt="{{_user.knownAs}}">
+    <img class="card-img-top" src="{{_user.photoUrl || '../assets/default-photo.png'}}" alt="{{_user.knownAs}}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item">
         <button class="btn btn-primary" [routerLink]="['/members/' + _user.id]"><i class="fa fa-users"></i></button>
