--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -14,7 +14,7 @@
     </ul>
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <span class="mr-1">
-        <img src="{{_photoUrl}}" alt="">
+        <img src="{{_photoUrl || '../assets/default-photo.png'}}" alt="">
       </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
         Welcome {{ _authService.DecodedToken.unique_name | titlecase}}
